# example-project

./: CMakeLists.txt  README.md
include/: shared_path.h
include/InWeekend/: camera.h  hittable.h  hittable_list.h  material.h  ray.h  rtweekend.h  sphere.h  vec3.h
src/01_Normals/: 01_Normals.cpp  CMakeLists.txt
src/99_RayTracingInOneWeekend/: CMakeLists.txt  README.md
src/99_RayTracingInOneWeekend/02_vec3_class/: 02_vec3_class.cpp
src/99_RayTracingInOneWeekend/03_ray_color/: 03_ray_color.cpp
src/99_RayTracingInOneWeekend/04_hit_sphere/: 04_hit_sphere.cpp
src/99_RayTracingInOneWeekend/05_hittable_objects/: 05_hittable_objects.cpp  CMakeLists.txt
src/99_RayTracingInOneWeekend/06_antialiasing/: 06_antialiasing.cpp
src/99_RayTracingInOneWeekend/07_diffuse_materials/: 07_diffuse_materials.cpp
src/99_RayTracingInOneWeekend/08_metal_materials/: 08_metal_materials.cpp
src/99_RayTracingInOneWeekend/09_Dielectrics/: 09_Dielectrics.cpp
src/99_RayTracingInOneWeekend/10_positionable_camera/: 10_positionable_camera.cpp
src/99_RayTracingInOneWeekend/11_depth_of_field/: 11_depth_of_field.cpp
src/99_RayTracingInOneWeekend/12_final_render/: 12_final_render.cpp
